--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+/*Navbar fontcolor*/
 .white {
     color: white;
 }
@@ -6,15 +8,34 @@ body {
     background-color: rgba(195, 177, 177, 0.945);
 }
 
+/*Navbar*/
 #navbar {
     background-color: rgb(103, 87, 87);
 }
 
+
+/*Review person*/
 .bcgp {
     color: rgb(0, 251, 255);
 }
 
+/*Reviews*/
 .rice {
     background-color: grey;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+
+
+/*PRICES*/
+.prices {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+
+/*Cards title*/
+.title {
+    font-style:italic;
+    color: darkslategrey;
 }
