--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /*Navbar fontcolor*/
 .white {
     color: white;
@@ -13,7 +12,6 @@ body {
     background-color: rgb(103, 87, 87);
 }
 
-
 /*Review person*/
 .bcgp {
     color: rgb(0, 251, 255);
@@ -25,17 +23,19 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
-
-
 /*PRICES*/
 .prices {
     font-style: italic;
     font-weight: lighter;
 }
 
-
 /*Cards title*/
 .title {
     font-style:italic;
     color: darkslategrey;
+}
+
+/*Cards background*/
+.bac-card {
+    background-color: rgb(244, 229, 229);
 }
