--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,19 @@ body {
 .bac-card {
     background-color: rgb(244, 229, 229);
 }
+
+/*GoogleMap*/
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
